Use static `valueOf` instead
(cherry picked from commit a32df10)